--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,33 @@ version: '3.8'
 services:
   # MongoDB Database
   mongo:
-    image: mongo:latest
+    image: mongo:8.0
     ports:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
+    command: mongod --auth
+    networks:
+      - skillshare-network
+
+  # Redis
+  redis:
+    image: redis:7.0-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
     networks:
       - skillshare-network
 
   # User Service
   user-service:
-    build: ./services/user-service
+    build:
+      context: ./services/user-service
+      dockerfile: Dockerfile
     ports:
       - "3001:3001"
     depends_on:
@@ -26,37 +39,53 @@ services:
       - PORT=3001
     networks:
       - skillshare-network
-    restart: unless-stopped
+    restart: on-failure
 
   # Course Service
   course-service:
-    build: ./services/course-service
+    build:
+      context: ./services/course-service
+      dockerfile: Dockerfile
     ports:
       - "3002:3002"
     depends_on:
       - mongo
+      - redis
     environment:
       - MONGO_URI=mongodb://admin:password123@mongo:27017/coursedb?authSource=admin
+      - USER_SERVICE_URL=http://user-service:3001
+      - PAYMENT_SERVICE_URL=http://payment-service:3003
+      - REDIS_URL=redis://redis:6379
       - PORT=3002
     networks:
       - skillshare-network
-    restart: unless-stopped
+    restart: on-failure
 
   # Payment Service
   payment-service:
-    build: ./services/payment-service
+    build:
+      context: ./services/payment-service
+      dockerfile: Dockerfile
     ports:
       - "3003:3003"
+    depends_on:
+      - mongo
     environment:
+      - MONGO_URI=mongodb://admin:password123@mongo:27017/paymentdb?authSource=admin
+      - USER_SERVICE_URL=http://user-service:3001
+      - COURSE_SERVICE_URL=http://course-service:3002
       - PORT=3003
-      # Thêm STRIPE_SECRET_KEY sau
+      # Thêm STRIPE_SECRET_KEY khi tích hợp Stripe
+      # - STRIPE_SECRET_KEY=sk_test_...
     networks:
       - skillshare-network
-    restart: unless-stopped
+    restart: on-failure
 
   # API Gateway
   api-gateway:
-    build: ./api-gateway
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     depends_on:
@@ -70,25 +99,26 @@ services:
       - PAYMENT_SERVICE_URL=http://payment-service:3003
     networks:
       - skillshare-network
-    restart: unless-stopped
+    restart: on-failure
 
   # Frontend
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8081:80"  # Nginx chạy trên port 80
+      - "8081:80"
     depends_on:
       - api-gateway
     environment:
-      - REACT_APP_API_URL=http://localhost:3000
+      - REACT_APP_API_BASE_URL=http://api-gateway:3000
     networks:
       - skillshare-network
-    restart: unless-stopped
+    restart: on-failure
 
 volumes:
   mongo-data:
+  redis-data:
 
 networks:
   skillshare-network:
