--- a/services/payment-service/package.json
+++ b/services/payment-service/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.1",
     "stripe": "^18.4.0"
   }
 }
