--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
@@ -67,6 +68,8 @@
     ]
   },
   "devDependencies": {
+    "@csstools/postcss-progressive-custom-properties": "^4.2.1",
+    "@humanwhocodes/config-array": "^0.13.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
