feat: Thêm tính năng upload ảnh và video với Cloudinary
- Triển khai dịch vụ upload Cloudinary cho frontend
- Thêm cấu hình Cloudinary và upload controller trong course-service
- Cập nhật model Course và Lesson để hỗ trợ file media
- Tích hợp tính năng upload vào component CourseForm
- Thêm Cloudinary context cho frontend
- Tạo routes và services cho upload

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
@@ -21,7 +23,7 @@
     "@types/recharts": "^2.0.1",
     "@types/simple-peer": "^9.11.8",
     "@types/socket.io-client": "^3.0.0",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
