--- a/services/course-service/package.json
+++ b/services/course-service/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "redis": "^4.6.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "redis": "^4.6.5"
   },
   "devDependencies": {
     "jest": "^30.1.1",
