feat: cập nhật giao diện frontend cho quản lý khóa học và buổi học (CourseForm, LessonMeeting, InstructorCourse, LessonForm, LessonLive) chore: cập nhật backend course-service (controllers, routes, services, middleware, CSP, Jitsi)

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,6 +18,27 @@ http {
     listen 80;
     server_name localhost;
 
+    # ✅ CSP MỞ RỘNG CHO TẤT CẢ DỊCH VỤ
+    add_header Content-Security-Policy "default-src 'self'; 
+      script-src 'self' 'unsafe-eval' 'wasm-unsafe-eval' 'unsafe-inline' 
+        https://meet.jit.si https://8x8.vc 
+        https://js.stripe.com 
+        https://accounts.google.com;
+      style-src 'self' 'unsafe-inline' 
+        https://meet.jit.si https://8x8.vc 
+        https://fonts.googleapis.com;
+      font-src 'self' data: 
+        https://fonts.gstatic.com;
+      connect-src * 
+        wss://meet.jit.si wss://8x8.vc 
+        https://api.stripe.com 
+        https://accounts.google.com;
+      img-src * data: blob:;
+      frame-src 
+        https://meet.jit.si https://8x8.vc 
+        https://js.stripe.com 
+        https://accounts.google.com;";
+
     root /usr/share/nginx/html;
     index index.html;
 
