--- a/services/chat-service/package.json
+++ b/services/chat-service/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.3.1",
     "redis": "^4.6.7",
     "axios": "^1.4.0",
+    "@pinecone-database/pinecone": "^1.0.0",
+    "openai": "^4.0.0",
     "express-rate-limit": "^6.8.1"
   },
   "devDependencies": {
