--- a/services/course-service/package.json
+++ b/services/course-service/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "jest": "^30.1.1",
