--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,11 @@
     "@cloudinary/url-gen": "^1.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
@@ -27,7 +32,9 @@
     "dayjs": "^1.11.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
@@ -78,7 +85,9 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
+    "@types/moment": "^2.13.0",
     "@types/react": "^19.1.12",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/parser": "^5.62.0",
