--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -289,7 +289,22 @@ services:
     networks:
       - skillshare-network
     restart: on-failure
-
+ # ========================
+  # Nginx reverse proxy
+  # ========================
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - frontend
+      - kong
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - skillshare-network
+    restart: on-failure
 # ====h====================
 # Volumes
 # ========================
@@ -304,3 +319,4 @@ volumes:
 networks:
   skillshare-network:
     driver: bridge
+    
