--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,7 +16,7 @@ http {
 
   server {
     listen 80;
-    server_name localhost;
+    server_name skillsharehub.japaneast.cloudapp.azure.com;
 
     # ✅ CSP MỞ RỘNG CHO TẤT CẢ DỊCH VỤ
     add_header Content-Security-Policy "default-src 'self'; 
